# Export-ME

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml  release.yml
docs/: index.html  index.json
scripts/: build.bat  build_nocheck.py  bump_version.py
source/: __init__.py  bat_export_ot.py  blender_manifest.toml  export_ot.py  folder_ot.py  icon_selector.py  panel.py  project_path_ot.py  remove_ot.py  smart_decal_apply_ot.py  tools_ot.py  utils.py
source/core/: __init__.py  paths.py  preferences.py  types.py
source/operators/: __init__.py  batch_export.py  export.py  folder.py  icon_selector.py  project_path.py  smart_decal.py  tools.py
source/ui/: __init__.py  panel.py
