[project]
name = "Export-ME"
version = "1.0.0"
description = "Metric Empire Blender Addon"
authors = [{ name = "Metric Empire", email = "hello@metricempire.com" }]
maintainers = [{ name = "Victor Chedeville", email = "victor.ched@gmail.com" }]
dependencies = ["fake-bpy-module-latest>=20241217"]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "GPL3" }

[project.optional-dependencies]
ruff = ["ruff>=0.3.5"]
scripts = ["toml>=0.10.2"]

[tool.ruff]
ignore = ["F403", "E402", "F405"]
target-version = "py312"
line-length = 120
